Bug fixes in post list width and overflow

--- a/client/src/components/CampaignAndRecipe/CampaignModal/styles/style.css
+++ b/client/src/components/CampaignAndRecipe/CampaignModal/styles/style.css
@@ -24,10 +24,15 @@
   min-width: 100%;
   min-height: 0;
 }
+.post-navigation-container {
+  max-width: 40%;
+  border-right: 0.5px solid var(--light-grey-theme-color);
+  border-bottom: 0.5px solid var(--light-grey-theme-color);
+  overflow: hidden;
+}
 
 .post-container {
-  flex-basis: 0;
-  flex-grow: 5;
+  flex: 1;
   display: flex;
   flex-direction: column;
 
